force-app/main/default/objects/TCPA_Compliance__c/TCPA_Compliance__c.object-meta.xml
<CustomObject>
    <description>It is a custom object</description>
    <label>TCPA Compliance</label>
    <nameField>
        <label>TCPA Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCPA Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>