force-app/main/default/objects/TCPA_Compliance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBR Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TCPA Compliances (EBR Owner)</relationshipLabel>
    <relationshipName>TCPA_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>