force-app/main/default/objects/TCPA_Compliance__c/fields/Call_Center_Agent__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TCPA_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>