force-app/main/default/objects/TCPA_Compliance__c/fields/createdBy_bp__c.field-meta.xml
<CustomField>
    <fullName>createdBy_bp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check box used to identify the EBR Record Type for the TCPA Compliance Object</description>
    <label>createdBy(bp)</label>
    <type>Checkbox</type>
</CustomField>