force-app/main/default/objects/TCPA_Compliance__c/fields/Date_of_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expiration_Date__c</fullName>
    <description>It will hold the date value</description>
    <label>Date of Expiration Date</label>
    <type>Date</type>
</CustomField>