force-app/main/default/objects/TCPA_Compliance__c/fields/EBR_Type__c.field-meta.xml
<CustomField>
    <fullName>EBR_Type__c</fullName>
    <description>It is a picklist field</description>
    <label>EBR Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>