force-app/main/default/objects/TCPA_Compliance__c/fields/EWC_Yes__c.field-meta.xml
<CustomField>
    <fullName>EWC_Yes__c</fullName>
    <formula>IF(RecordTypeId = &quot;012j0000001139t&quot;, IF(CONTAINS( Name , &quot;Yes&quot;), &quot;EWC - Yes&quot;, &quot;EWC - No&quot;),
    IF( Date_of_Expiration_Date__c  &gt;=  TODAY() ,&quot;EBR - Yes&quot;, &quot;ERB - Expired&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCPA Report</label>
    <type>Text</type>
</CustomField>