force-app/main/default/objects/TCPA_Compliance__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>TCPA Compliances</relationshipLabel>
    <relationshipName>TCPA_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>