force-app/main/default/objects/TCPA_Compliance__c/fields/User_Account__c.field-meta.xml
<CustomField>
    <fullName>User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TCPA Compliances (User Account)</relationshipLabel>
    <relationshipName>TCPA_Compliances1</relationshipName>
    <type>Lookup</type>
</CustomField>