force-app/main/default/objects/TCPA_Compliance__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Address</label>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>TCPA Compliances</relationshipLabel>
    <relationshipName>TCPA_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>