force-app/main/default/objects/TCPA_Compliance__c/recordTypes/EBR.recordType-meta.xml
<RecordType>
    <fullName>EBR</fullName>
    <active>true</active>
    <description>It is a custom report type</description>
    <label>EBR</label>
</RecordType>