force-app/main/default/objects/TCPA_Compliance__c/recordTypes/Express_Written_Consent.recordType-meta.xml
<RecordType>
    <fullName>Express_Written_Consent</fullName>
    <active>true</active>
    <description>Custom Report Type</description>
    <label>Express Written Consent</label>
</RecordType>